# llm-rag

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ml/: Core логика.ipynb  install_ollama_llm.py  lib.py  llm.py  load.py  main.py  settings.py
